# video-to-ml-suite

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  INSTRUCTIONS.md  README.md  Start_Engine.bat  VideoToMLSuite.spec  build_linux.sh  convert_icon.py  docker-compose.yaml  installer_script.iss  orchestrator.py  package_app.py  requirements.txt  update_plan.md
deployer/: app.py
engine/: CMakeLists.txt
engine/src/engine/: decoder.cpp  decoder.hpp  main.cpp  processor.cpp  processor.hpp  writer.cpp  writer.hpp
generator/: app.py
inspector/: app.py
kids-version/: DECISION_LOG.md  DESIGN.md  docker-compose.yaml
kids-version/backend/: Dockerfile  main.py  requirements.txt
kids-version/backend/core/: __init__.py  config.py  database.py
kids-version/backend/models/: __init__.py  settings.py
kids-version/backend/routers/: child.py  language.py  parent.py
kids-version/backend/strings/: de.json  el.json  en.json
kids-version/frontend/: index.html  package-lock.json  package.json
kids-version/frontend/src/: App.tsx  index.css
kids-version/frontend/src/components/: LanguagePicker.tsx  MascotBubble.tsx  ModeSelector.tsx
kids-version/frontend/src/pages/: KidsHome.tsx  ParentDashboard.tsx
labeler/: app.py
rules/: PROJECT_GUIDELINES.md
shared/: guided_panel.py  help_wizard.py  orchestrator_old.py  strings.py  style.qss  utils.py
tools/: clean_source.py  scratch_convert.py
trainer/: app.py
